fixed bugs: - added close button to result divs - closing maia (add, get, search) divs, when response comes - clearing input after submitting form and text boxes

--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -138,7 +138,7 @@ html{
 }
 
 
-.closeAddPaperFormButton, .closeGetPaperButton, .closeSearchPaperButton{
+.closeAddPaperFormButton, .closeGetPaperButton, .closeSearchPaperButton, .closeAddResultViewButton, .closeGetResultViewButton, .closeSearchResultViewButton{
     position: absolute;
     top: -15px;
     right: -15px;
